test models e views

--- a/animais/templates/index.html
+++ b/animais/templates/index.html
@@ -9,7 +9,13 @@
 <body>
     <a class="navbar">Busca Animal</a>
 
-
-    <input type="text" id="buscar-animal" placeholder="Exemplo: Leão">
+    <form>
+        <input type="text" id="buscar-animal" placeholder="Exemplo: Leão" name="buscar">
+        <button type="submit">Pesquisar</button>
+    </form>
+    <div class="result-description"></div>
+    <div class="result-description"></div>
+    <div class="result-description"></div>
+    <div class="result-description"></div>
 </body>
 </html>
